src/pages/fr/v1.18.0/sdk/start.mdx
---
title: "SDK JavaScript - méthode 'start'"
metaTitle: "SDK JavaScript - méthode 'start'"
metaDescription: "Détails sur la méthode 'start' du SDK d'OpenReplay"
---

Cette méthode est utilisée pour démarrer le tracker. En démarrant le tracker, l'enregistrement de la session commence.

## Signature

```js
start(startOpts?: Partial<StartOptions>): Promise<StartPromiseReturn>
```

### Paramètres
La méthode `start` accepte un paramètre facultatif qui vous permet de personnaliser différents aspects de l'enregistrement :
- `userID: string` : utilisé pour définir manuellement l'ID utilisateur afin de le suivre à travers les sessions. Il s'agit d'une valeur de type string et elle peut être ce que vous voulez.
- `metadata: Record<string, string>` : définit manuellement les valeurs de métadonnées. Consultez la [section Métadonnées](/installation/metadata/) pour en savoir plus sur cette fonctionnalité.
- `forceNew: boolean` : utilisé pour forcer une nouvelle session après le rechargement de la page. Par défaut, il est défini sur `false`, de sorte qu'après un rechargement la session est conservée.
- `sessionHash: string` : utilisé pour les sessions persistantes (sticky). Utile si vous avez une application multi-sites ou si vous devez rediriger l'utilisateur hors de votre site puis l'y ramener (comme vers une passerelle de paiement).
- `assistOnly: boolean` : lance le tracker en mode assistance uniquement (assist-only), qui n'enverra pas les données de session au backend (fonctionnalité de l'édition EE)

### Valeur de retour

Une fois démarrée, la méthode renverra une promesse avec un objet d'informations de session contenant :
- `sessionID: string` : une valeur de type string représentant l'ID de la session démarrée.
Démarre le tracker (et le processus d'enregistrement) puis renvoie une promesse avec les informations de session (sessionID, sessionHash, userUUID).


